olhem a tela de login

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,7 +15,7 @@
     <h1 id="title">DocPlus</h1>
   </div>
   <div class="row">
-    <ion-button class="btn-center" [navPush]="login">Login</ion-button>
+    <ion-button class="btn-center" >Login</ion-button>
     <div class="divider"></div>
     <ion-button class="btn-center"fill="clear" >Cadastrar</ion-button>
   </div>
