--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="row">
-    
+    <label for="email" class="email">Email:</label>
+    <ion-input class="input-login" type="email"></ion-input>
+    <label for="senha" class="senha">Senha:</label>
+    <ion-input class="input-senha" type="password"></ion-input>
+  </div>
+  <div>
+      <ion-button class="btn-center" >Entrar</ion-button>
   </div>
 </ion-content>
