arrumei a tela de login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,17 +1,18 @@
-<ion-header>
+<!--<ion-header>
   <ion-toolbar>
     <ion-title>Login</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header>-->
 
 <ion-content>
-  <div class="row">
-    <label for="email" class="email">Email:</label>
-    <ion-input class="input-login" type="email"></ion-input>
-    <label for="senha" class="senha">Senha:</label>
-    <ion-input class="input-senha" type="password"></ion-input>
+  <div class="titulo">
+    <label for="titulo">Login</label>
   </div>
   <div>
-      <ion-button class="btn-center" >Entrar</ion-button>
+    <label for="email" class="email">Email</label>
+    <input class="input-login" type="email">
+    <label for="senha" class="senha">Senha</label>
+    <input class="input-senha" type="password">
+    <ion-button class="btn-center" >Entrar</ion-button>
   </div>
 </ion-content>
