--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,9 +1,13 @@
-ion-title{
+.titulo label {
+    display: block;
+    margin-top: 35px;
     text-align: center;
-    font-weight: bold;
-    font-family: arial;
+    font-size: 80px;
+    text-transform: uppercase;
     color: rgb(35, 148, 172);
+    font-family: arial;
 }
+
 #email{
     margin-bottom: 15px;
     margin-top: 15px;
@@ -18,10 +22,11 @@ ion-title{
 }
 .email{
     display: block;
-    margin-top: 135px;
+    margin-top: 60px;
     font-weight: bold;
     font-size: 25px;
     color: rgb(35, 148, 172);
+    text-align: center;
 }
 .senha{
     font-weight: bold;
@@ -29,18 +34,27 @@ ion-title{
     color: rgb(35, 148, 172);
     margin-top: 38px;
     display: block;
+    text-align: center;
 }
 .input-login{
     font-size: 25px;
-    border: rgb(35, 148, 172) solid 3px;
+    background-color: #fff;
+    border: none;
+    border-bottom: rgb(35, 148, 172) solid 3px;
     font-family: arial;
     font-weight: bold;
+    color: rgb(35, 148, 172);
+    margin-left: 14px;
 }
 .input-senha{
     font-size: 25px;
-    border: rgb(35, 148, 172) solid 3px;
+    background-color: #fff;
     font-family: arial;
     font-weight: bold;
+    border: none;
+    border-bottom: rgb(35, 148, 172) solid 3px;
+    color: rgb(35, 148, 172);
+    margin-left: 14px;
 }
 .btn-center{
     margin-left: auto;
