--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,6 +13,6 @@
     <input class="input-login" type="email">
     <label for="senha" class="senha">Senha</label>
     <input class="input-senha" type="password">
-    <ion-button class="btn-center" >Entrar</ion-button>
+    <ion-button class="btn-entrar" >Entrar</ion-button>
   </div>
 </ion-content>
