--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -56,7 +56,7 @@
     color: rgb(35, 148, 172);
     margin-left: 14px;
 }
-.btn-center{
+.btn-entrar{
     margin-left: auto;
     margin-right: auto;
     display: block;
