alteração no layout - colocando ion-components

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,9 +15,9 @@
     <h1 id="title">DocPlus</h1>
   </div>
   <div class="row">
-    <ion-button class="btn-center" >Login</ion-button>
+    <ion-button class="btn-center" (click)="openLoginPage()">Login</ion-button>
     <div class="divider"></div>
-    <ion-button class="btn-center"fill="clear" >Cadastrar</ion-button>
+    <ion-button class="btn-center" fill="clear" (click)="openCadastroPage()" >Cadastrar</ion-button>
   </div>
   
 </ion-content>
