--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button ></ion-back-button>
     </ion-buttons>
-    <ion-title>Login</ion-title>
+    <!-- <ion-title>Login</ion-title> -->
   </ion-toolbar>
 </ion-header>
 
@@ -12,8 +12,6 @@
     <label for="titulo">Login</label>
   </div>
   <div class="form">
-    <!-- <label for="email" class="email">Email</label>
-    <input class="input-login" type="email"> -->
     <ion-item>
       <ion-label position="floating">E-mail</ion-label>
       <ion-input type='email'></ion-input>
@@ -22,8 +20,6 @@
       <ion-label position="floating">Senha</ion-label>
       <ion-input type='password'></ion-input>
     </ion-item>
-    <!-- <label for="senha" class="senha">Senha</label>
-    <input class="input-senha" type="password"> -->
     <ion-button class="btn-entrar" click="open">Entrar</ion-button>
   </div>
 </ion-content>
