--- a/src/app/cadastro/cadastro.page.scss
+++ b/src/app/cadastro/cadastro.page.scss
@@ -1,15 +1,19 @@
-#formulario{
+.titulo .cadastro {
     display: block;
-    width: 100%;
+    margin-top: 35px;
+    text-align: center;
+    font-size: 59px;
+    text-transform: uppercase;
+    color: rgb(35, 148, 172);
+    font-family: arial;
 }
 .cadastro{
     text-align: center;
     margin-bottom: 15px;
     color: rgb(35, 148, 172);
 }
-.input-group{
-    display: block;
-    text-align: center;
+.form{
+    margin-top: 20px;
 }
 .btn-cadastro{
     display: block;
@@ -18,22 +22,9 @@
     margin-left: auto;
     margin-right: auto;
 }
-#nome, #email-c, #senha-c, #data, #tel, #cpf, #rua, #cidade, #cep{
-    font-size: 19px;
-    border: none;
-    border-bottom: rgb(35, 148, 172) solid 2px;
-    margin-bottom: 15px;
-    font-family: arial;
-}
 .text{
     font-family: arial;
     font-size: 19px;
     color: rgb(35, 148, 172);
     display: block;
-}
-.select{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: arial;
 }
