--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>buscar</ion-title>
+    <ion-title>Buscar</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -11,11 +11,11 @@
   <h1 id="busca-recente">Buscas Recentes</h1>
   <ion-icon id="recente-icon" name="refresh"></ion-icon>
   <p>Cardiologista</p>
-  <h1 id="categorias">Categoria</h1>
-  <button id="cardiologista" href="/home/gabriel/Documents/App/Docplus/Docplus/src/app/resultados/resultados.page.html">Cardiologista</button>
-  <button id="psicologo">Psicólogo</button>
-  <button id="pediatra">Pediatra</button>
-  <button id="oftalmo">Oftalmologista</button>
-  <button id="pneu">Pneumologista</button>
-  <button id="endo">Endrócrinologista</button>
+  <h1 id="categorias">Especialidade</h1>
+  <ion-button id="cardiologista" size="large">Cardiologista</ion-button>
+  <ion-button id="psicologo" size="large">Psicólogo</ion-button>
+  <ion-button id="pediatra" size="large">Pediatra</ion-button>
+  <ion-button id="oftalmo" size="large">Oftalmologista</ion-button>
+  <ion-button id="pneu" size="large">Pneumologista</ion-button>
+  <ion-button id="endo" size="large">Endócrinologista</ion-button>
 </ion-content>
