--- a/src/app/resultados/resultados.page.html
+++ b/src/app/resultados/resultados.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>resultados</ion-title>
+    <ion-title>Resultados</ion-title>
   </ion-toolbar>
 </ion-header>
 
