--- a/src/app/agenda/agenda.page.scss
+++ b/src/app/agenda/agenda.page.scss
@@ -1,3 +1,11 @@
+ion-header,ion-toolbar{
+    height: 80px;
+    --color:#fff;
+    --ion-background-color: var(--ion-color-primary);
+}
+ion-title{
+    padding-top:25px; 
+}
 .form{
     margin-top: 30px;
     width: 100%;
@@ -14,4 +22,8 @@ ion-button{
     margin-top: 30px;
     margin-left: 50%;
     transform: translateX(-50%);
+    --background: var(--ion-color-primary);
+}
+ion-radio{
+    --background: var(--ion-color-primary);
 }
