--- a/src/app/buscar/buscar.page.scss
+++ b/src/app/buscar/buscar.page.scss
@@ -1,3 +1,6 @@
+ion-content{
+  --ion-background-color: var(--ion-color-primary);
+}
 #input-search{
     position: absolute;
     width: 90%;
@@ -10,6 +13,7 @@
     outline: none;
     box-shadow: 1px 1px 1px #777;
     border-radius: 10px;
+    opacity: 0.85;
   }
   #search-icon{
     position: absolute;
@@ -22,34 +26,34 @@
     margin-top: 100px;
     margin-left: 20px;
     font-size: 20px;
+    color: #fff;
   }
   #recente-icon{
-    margin-left: 10px;
+    margin-left: 20px;
     margin-top: 15px;
     color: #CFD7DF;
   }
   p{
     position: absolute;
     margin-top: -21px;
-    margin-left: 35px;
+    margin-left: 40px;
     color: #CFD7DF;
   }
   #categorias{
     font-size: 20px;
     margin-left: 20px;
     margin-top: 60px;
+    color: #fff;
   }
-  button{
+  ion-button{
     position: absolute;
-    color: #2A7EC0;
     width: 150px;
     height: 70px;
-    border-radius: 25px;
-    opacity: 0.5;
-    font-size: 15px;
-    font-weight: bold;
-    outline: none;
-    box-shadow: 1px 1px 1px 1px #777;
+    font-size: 12px;
+    --color: var(--ion-color-primary);
+    --background: #fff;
+    --border-radius: 25px;
+    --opacity: .85;
   }
   #cardiologista{
     top: 270px;
