--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: rgb(35, 148, 172);;
+  --ion-color-primary: rgb(35, 148, 172);
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: rgb(35, 148, 172);
+  --ion-color-primary-tint: rgb(16, 134, 160);
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
