terminando perfil da clinica

--- a/src/app/agenda/agenda.page.scss
+++ b/src/app/agenda/agenda.page.scss
@@ -1,11 +1,11 @@
-ion-header,ion-toolbar{
-    height: 80px;
-    --color:#fff;
-    --ion-background-color: var(--ion-color-primary);
-}
-ion-title{
-    padding-top:25px; 
-}
+// ion-header,ion-toolbar{
+//     height: 80px;
+//     --color:#fff;
+//     --ion-background-color: var(--ion-color-primary);
+// }
+// ion-title{
+//     padding-top:25px; 
+// }
 .form{
     margin-top: 30px;
     width: 100%;
