--- a/src/app/chat/chat.page.html
+++ b/src/app/chat/chat.page.html
@@ -1,15 +1,15 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Chat</ion-title>
-    <ion-icon id="arrow" name="arrow-round-back"></ion-icon>
-    <ion-icon id="plus" name="more"></ion-icon>
-    <h1>Hospital São José</h1>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Hospital São José</ion-title>    
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
 </ion-content>
 <ion-footer>
-    <ion-input class="input" placeholder="    Message"></ion-input>
+    <ion-input class="input" placeholder="Message"></ion-input>
     <ion-icon id="send" name="send"></ion-icon>
 </ion-footer>
