--- a/src/app/contatos/contatos.page.html
+++ b/src/app/contatos/contatos.page.html
@@ -7,8 +7,7 @@
 <ion-content>
   <ion-list>
     <ion-list-header>Conversas recentes</ion-list-header>
-
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -17,9 +16,9 @@
         <h3>Visto às 14 horas</h3>
         <p>Você ta legal...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -28,9 +27,9 @@
         <h3>Look, kid...</h3>
         <p>I've got enough on my plate as it is, and I...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -39,9 +38,9 @@
         <h3>I can handle myself</h3>
         <p>You will remove these restraints and leave...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -50,11 +49,11 @@
         <h3>Your thoughts betray you</h3>
         <p>I feel the good in you, the conflict...</p>
       </ion-label>
-    </button>
+    </ion-item>
   </ion-list>
   <ion-list>
     <ion-list-header>Outras clinicas do seu convenio</ion-list-header>
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -63,9 +62,9 @@
         <h3>Visto às 14 horas</h3>
         <p>Você ta legal...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -74,9 +73,9 @@
         <h3>Look, kid...</h3>
         <p>I've got enough on my plate as it is, and I...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -85,9 +84,9 @@
         <h3>I can handle myself</h3>
         <p>You will remove these restraints and leave...</p>
       </ion-label>
-    </button>
+    </ion-item>
 
-    <button (click)="openChatPage()">
+    <ion-item button (click)="openChatPage()">
       <ion-avatar slot="start">
         <img src="https://via.placeholder.com/150">
       </ion-avatar>
@@ -96,6 +95,6 @@
         <h3>Your thoughts betray you</h3>
         <p>I feel the good in you, the conflict...</p>
       </ion-label>
-    </button>
+    </ion-item>
   </ion-list>
 </ion-content>
