--- a/src/app/chat/chat.page.scss
+++ b/src/app/chat/chat.page.scss
@@ -1,20 +1,10 @@
-ion-header,ion-toolbar{
-    height: 100px;
-    --color:#fff;
-    --ion-background-color: var(--ion-color-primary);
-    h1{
-        margin-top: 17px;
-        margin-left: 50px;
-        font-size: 18px;
-    }
-}
-ion-title{
-    padding-top:25px; 
-}
 ion-content{
     --ion-background-color:#F5F9FC;
 }
 ion-footer{
+    ion-input{
+      --padding-start:25px;
+    }
     height: 80px;
     background-color: var(--ion-color-primary);
 }
