--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -4,10 +4,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div class="search">
-    <input id="input-search" type="text" placeholder="Busque Aqui">
-    <ion-icon id="search-icon" name="search"></ion-icon>
-  </div>
+  <ion-searchbar showCancelButton="always"></ion-searchbar>
   <h1 id="busca-recente">Buscas Recentes</h1>
   <ion-icon id="recente-icon" name="refresh"></ion-icon>
   <p>Cardiologista</p>
