--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,6 +20,6 @@
       <ion-label position="floating">Senha</ion-label>
       <ion-input type='password'></ion-input>
     </ion-item>
-    <ion-button class="btn-entrar" click="open">Entrar</ion-button>
+    <ion-button class="btn-entrar" (click)="openBuscarPage()">Entrar</ion-button>
   </div>
 </ion-content>
