--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -13,31 +13,31 @@
     <div class="row">
       <div class="form">
         <ion-item>
-          <ion-label position="floating">Nome Completo</ion-label>
+          <ion-label position="stakced">Nome Completo:</ion-label>
           <ion-input type='text' disabled>Matheus Vilela</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Data Nacimento</ion-label>
+          <ion-label position="stakced">Data Nacimento:</ion-label>
           <ion-input type='number' disabled>11/04/1999</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">E-mail</ion-label>
+          <ion-label position="stakced">E-mail:</ion-label>
           <ion-input type='email' disabled>matheusvilela1104@gmail.com</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">CPF</ion-label>
+          <ion-label position="stakced">CPF:</ion-label>
           <ion-input type='number' disabled>445.396.238-00</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Endereço</ion-label>
+          <ion-label position="stakced">Endereço:</ion-label>
           <ion-input type='text' disabled>Rua Tiradentes n402, Centro</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Cidade</ion-label>
+          <ion-label position="stakced">Cidade:</ion-label>
           <ion-input type='text'disabled>Jacareí</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Estado</ion-label>
+          <ion-label position="stakced">Estado:</ion-label>
           <ion-select disabled>
             <ion-select-option value="AC">AC</ion-select-option>
             <ion-select-option value="AL">AL</ion-select-option>
@@ -69,11 +69,11 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">CEP</ion-label>
+          <ion-label position="stakced">CEP:</ion-label>
           <ion-input type='number' disabled>12308-470</ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Convênio</ion-label>
+          <ion-label position="stakced">Convênio:</ion-label>
           <ion-select disabled>
             <ion-select-option value="Allianz" selected>Allianz</ion-select-option>
             <ion-select-option value="Amil">AMIL</ion-select-option>
