--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Buscar</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,10 +12,18 @@
   <ion-icon id="recente-icon" name="refresh"></ion-icon>
   <p>Cardiologista</p>
   <h1 id="categorias">Especialidade</h1>
-  <ion-button id="cardiologista" size="large">Cardiologista</ion-button>
-  <ion-button id="psicologo" size="large">Psicólogo</ion-button>
-  <ion-button id="pediatra" size="large">Pediatra</ion-button>
-  <ion-button id="oftalmo" size="large">Oftalmologista</ion-button>
-  <ion-button id="pneu" size="large">Pneumologista</ion-button>
-  <ion-button id="endo" size="large">Endócrinologista</ion-button>
+  <ion-grid>
+    <ion-row>
+      <ion-col><ion-button size="large">Cardiologista</ion-button></ion-col>
+      <ion-col><ion-button size="large">Psicólogo</ion-button></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col><ion-button size="large">Pediatra</ion-button></ion-col>
+      <ion-col><ion-button size="large">Oftalmologista</ion-button></ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col><ion-button size="large">Pneumologista</ion-button></ion-col>
+      <ion-col><ion-button size="large">Endócrinologista</ion-button></ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
