--- a/src/app/resultados/resultados.page.scss
+++ b/src/app/resultados/resultados.page.scss
@@ -1,5 +1,8 @@
-ion-content {
+ion-header,ion-toolbar{
     --ion-background-color: var(--ion-color-primary);
+}
+ion-title{
+    --color:#fff;
 }
 .cards{
     border-radius: 10px;
