Rotas do menu, cadastro e resultados foram inplementadas

--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -101,5 +101,5 @@
         </ion-select>
       </ion-item>
   </div>
-  <ion-button class="btn-cadastro">Cadastrar</ion-button>
+  <ion-button class="btn-cadastro" (click)="openBuscarPage()">Cadastrar</ion-button>
 </ion-content>
