--- a/src/app/historico/historico.page.html
+++ b/src/app/historico/historico.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-title>Histórico</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button ></ion-back-button>
+    </ion-buttons>
+    <ion-title>Historico</ion-title>
   </ion-toolbar>
 </ion-header>
 
