--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,7 +15,7 @@
   <form [formGroup]="loginForm">
     <ion-item>
       <ion-label position="floating">E-mail</ion-label>
-      <ion-input formControlName="email" type='text'></ion-input>
+      <ion-input formControlName="email" type='email'></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
