--- a/src/app/buscar/buscar.page.html
+++ b/src/app/buscar/buscar.page.html
@@ -8,22 +8,5 @@
 </ion-header>
 <ion-content>
   <ion-searchbar showCancelButton="always"></ion-searchbar>
-  <h1 id="busca-recente">Buscas Recentes</h1>
-  <ion-icon id="recente-icon" name="refresh"></ion-icon>
-  <p>Cardiologista</p>
-  <h1 id="categorias">Especialidade</h1>
-  <ion-grid>
-    <ion-row>
-      <ion-col><ion-button size="large">Cardiologista</ion-button></ion-col>
-      <ion-col><ion-button size="large">Psicólogo</ion-button></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col><ion-button size="large">Pediatra</ion-button></ion-col>
-      <ion-col><ion-button size="large">Oftalmologista</ion-button></ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col><ion-button size="large">Pneumologista</ion-button></ion-col>
-      <ion-col><ion-button size="large">Endócrinologista</ion-button></ion-col>
-    </ion-row>
-  </ion-grid>
+  <div id="map"></div>
 </ion-content>
