--- a/src/app/buscar/buscar.page.scss
+++ b/src/app/buscar/buscar.page.scss
@@ -1,71 +1,8 @@
-// ion-content{
-//   --ion-background-color: var(--ion-color-primary);
-// }
 ion-searchbar{
   --background: #fff;
   --cancel-button-color: var(--ion-color-primary);
   --clear-button-color: var(--ion-color-primary);
 }
-#search-icon{
-  position: absolute;
-  font-size: 30px;
-  color: #2A7EC0;
-  right: 25px;
-  top: 30px;
+#map{
+  height: 90%;
 }
-#busca-recente{
-  margin-top: 40px;
-  margin-left: 20px;
-  font-size: 20px;
-}
-#recente-icon{
-  margin-left: 20px;
-  margin-top: 15px;
-  color: rgb(70, 70, 70);
-}
-p{
-  // position: absolute;
-  margin-top: -21px;
-  margin-left: 40px;
-  color: rgb(70, 70, 70);
-}
-#categorias{
-  font-size: 20px;
-  margin-left: 20px;
-  margin-top: 60px;
-  // color:#000;
-  // color: #fff;
-}
-ion-button{
-  // position: absolute;
-  width: 150px;
-  height: 70px;
-  font-size: 12px;
-  // --color: var(--ion-color-primary);
-  // --background: #fff;
-  --border-radius: 25px;
-}
-// #cardiologista{
-//   top: 270px;
-//   left: 20px;
-// }
-// #pediatra{
-//   top: 270px;
-//   right: 20px;
-// }
-// #psicologo{
-//   top: 370px;
-//   left: 20px;
-// }
-// #oftalmo{
-//   top: 370px;
-//   right: 20px;
-// }
-// #pneu{
-//     top: 470px;
-//     left: 20px;
-// }
-// #endo{
-//   top: 470px;
-//   right: 20px;
-// }
